attached_assets/Pasted-Walid-Walid-PC-MINGW64-bnk-extract-GUI-make-cc-std-gnu18-Wall-Wextra-g-Os-flto-Ilibogg--1739352285708.txt
Walid@Walid-PC MINGW64 ~/bnk-extract-GUI
$ make
cc -std=gnu18 -Wall -Wextra -g -Os -flto -Ilibogg-1.3.5/include -Ilibvorbis-1.3.7/include    -c -o gui.o gui.c
cc -std=gnu18 -Wall -Wextra -g -Os -flto -Ilibogg-1.3.5/include -Ilibvorbis-1.3.7/include    -c -o utility.o utility.c
utility.c: In function 'SaveEventsBnk':
utility.c:566:59: error: macro "TreeView_GetChild" requires 2 arguments, but only 1 given
  566 |         HTREEITEM currentItem = TreeView_GetChild(rootItem);
      |                                                           ^
In file included from C:/msys64/mingw64/include/shlobj.h:116,
                 from utility.c:6:
C:/msys64/mingw64/include/commctrl.h:3659:9: note: macro "TreeView_GetChild" defined here
 3659 | #define TreeView_GetChild(hwnd,hitem) TreeView_GetNextItem(hwnd,hitem,TVGN_CHILD)
      |         ^~~~~~~~~~~~~~~~~
utility.c:566:33: error: 'TreeView_GetChild' undeclared (first use in this function)
  566 |         HTREEITEM currentItem = TreeView_GetChild(rootItem);
      |                                 ^~~~~~~~~~~~~~~~~
utility.c:566:33: note: each undeclared identifier is reported only once for each function it appears in
utility.c:578:68: error: macro "TreeView_GetChild" requires 2 arguments, but only 1 given
  578 |                 HTREEITEM childItem = TreeView_GetChild(currentItem);
      |                                                                    ^
C:/msys64/mingw64/include/commctrl.h:3659:9: note: macro "TreeView_GetChild" defined here
 3659 | #define TreeView_GetChild(hwnd,hitem) TreeView_GetNextItem(hwnd,hitem,TVGN_CHILD)
      |         ^~~~~~~~~~~~~~~~~
utility.c:597:49: error: macro "TreeView_GetChild" requires 2 arguments, but only 1 given
  597 |         currentItem = TreeView_GetChild(rootItem);
      |                                                 ^
C:/msys64/mingw64/include/commctrl.h:3659:9: note: macro "TreeView_GetChild" defined here
 3659 | #define TreeView_GetChild(hwnd,hitem) TreeView_GetNextItem(hwnd,hitem,TVGN_CHILD)
      |         ^~~~~~~~~~~~~~~~~
utility.c:608:68: error: macro "TreeView_GetChild" requires 2 arguments, but only 1 given
  608 |                 HTREEITEM childItem = TreeView_GetChild(currentItem);
      |                                                                    ^
C:/msys64/mingw64/include/commctrl.h:3659:9: note: macro "TreeView_GetChild" defined here
 3659 | #define TreeView_GetChild(hwnd,hitem) TreeView_GetNextItem(hwnd,hitem,TVGN_CHILD)
      |         ^~~~~~~~~~~~~~~~~
utility.c:562:19: warning: unused variable 'rootItem' [-Wunused-variable]
  562 |         HTREEITEM rootItem = TreeView_GetRoot(treeview);
      |                   ^~~~~~~~
utility.c:529:43: warning: unused parameter 'eventItem' [-Wunused-parameter]
  529 | void SaveEventsBnk(HWND window, HTREEITEM eventItem) {
      |                                 ~~~~~~~~~~^~~~~~~~~
make: *** [<builtin>: utility.o] Error 1
